Fixed play button not centered

--- a/assets/john-custom.css
+++ b/assets/john-custom.css
@@ -26,3 +26,10 @@
     width: 100%;
   }
 }
+.section-video .video-player .video-js .vjs-big-play-button {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
