--- a/styles/sections/_section-product-showcase.scss
+++ b/styles/sections/_section-product-showcase.scss
@@ -10,5 +10,16 @@
         @include touch {
             width: 100%;
           }
+
+        .video-js {
+
+            .vjs-big-play-button {
+               left: 0;
+               right: 0;
+               top: 0;
+               bottom: 0;
+               margin: auto;
+            }
+        }
     }
 }
